Cleaned up some warnings for @string usage